Refactored tutorialmod to hidenametags

--- a/build.gradle
+++ b/build.gradle
@@ -151,8 +151,8 @@ dependencies {
 
 mixin {
     // MixinGradle Settings
-    add sourceSets.main, 'mixins.tutorialmod.refmap.json'
-    config 'mixins.tutorialmod.json'
+    add sourceSets.main, 'mixins.hidenametags.refmap.json'
+    config 'mixins.hidenametags.json'
     debug.verbose = true
     debug.export = true
 }
